Author Box: Prevent Gap After Author Title Link

--- a/widgets/author-box/styles/default.less
+++ b/widgets/author-box/styles/default.less
@@ -44,6 +44,11 @@
 		.sow-author-box-avatar {
 			flex: 1;
 			text-align: center;
+
+			a {
+				display: inline-block;
+				line-height: 0;
+			}
 			.avatar {
 				border-radius: @avatar_border_radius;
 			}
